[package]
name = "adventOfCode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
bench = true


[dependencies]
cargo-aoc = "0.3.3"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.10.5"
regex = "1"
bit-set = "0.5.3"
fxhash = "0.2.1"
num = "0.4.0"
pathfinding = "4.0.0"